Nodegroups: Wrong input socket color #78080

Closed
opened 2020-06-20 20:43:54 +02:00 by Johannes Lampert · 6 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: Intel(R) HD Graphics 5500 Intel 4.4.0 - Build 20.19.15.4531

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-19 23:28, hash: 874af5301c

Short description of error
Say you've got two Node Groups in your shader: Group A, which has Value inputs (grey ones) and Group B, which has Vector inputs (blue ones). If you take an instance of Node Group A and change it to Node Group B (via the little dropdown menu next to the Node Group's name), the color of the input sockets does not change (i.e. they stay grey even though they no longer accept Value input)

nodegroup_inputs_bug.JPG

Exact steps for others to reproduce the error

  • In the Shader Editor, create a Math node, a Color Mix node & a Vector Math node (without connecting them)
  • Select each of the three nodes and press Ctrl+G, to put each of them into their own Node Group, and name them "A", "B" & "C" respectively
  • Duplicate Node Group "A" and change this new instance to either Group "B" or "C"
  • Notice the input sockets do not change color accordingly

nodegroup_input_bug.blend

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: Intel(R) HD Graphics 5500 Intel 4.4.0 - Build 20.19.15.4531 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-19 23:28, hash: `874af5301c` **Short description of error** Say you've got two Node Groups in your shader: Group A, which has Value inputs (grey ones) and Group B, which has Vector inputs (blue ones). If you take an instance of Node Group A and change it to Node Group B (via the little dropdown menu next to the Node Group's name), the color of the input sockets does not change (i.e. they stay grey even though they no longer accept Value input) ![nodegroup_inputs_bug.JPG](https://archive.blender.org/developer/F8634166/nodegroup_inputs_bug.JPG) **Exact steps for others to reproduce the error** - In the Shader Editor, create a Math node, a Color Mix node & a Vector Math node (without connecting them) - Select each of the three nodes and press Ctrl+G, to put each of them into their own Node Group, and name them "A", "B" & "C" respectively - Duplicate Node Group "A" and change this new instance to either Group "B" or "C" - Notice the input sockets do not change color accordingly [nodegroup_input_bug.blend](https://archive.blender.org/developer/F8634165/nodegroup_input_bug.blend)

Added subscriber: @alterdings

Added subscriber: @alterdings

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can reproduce the problem.
To replicate in the attached file, just change the nodegroup "value" to "vector".

I can reproduce the problem. To replicate in the attached file, just change the nodegroup "value" to "vector".

This issue was referenced by e761d0bdc9

This issue was referenced by e761d0bdc93007d3fadf14fc42eff3a71ad5ee26
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jacques Lucke self-assigned this 2020-06-24 16:55:51 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78080
No description provided.